@@ -1,5 +1,9 @@
 package tiny.lehr.container;
 
+import tiny.lehr.bean.TommyRequest;
+import tiny.lehr.bean.TommyResponse;
+import tiny.lehr.container.valve.TommyValve;
+
 import javax.servlet.Servlet;
 import javax.servlet.ServletException;
 import javax.servlet.ServletRequest;
@@ -12,23 +16,38 @@ import java.io.IOException;
  */
 public class TommyWrapper implements TommyContainer {
 
+    private String servletClass;
+
     private Servlet myServlet;
 
-    private ClassLoader loader;
+    private TommyLoader loader;
 
-    /**
-     * 暂时还不区分两种Request
-     */
-
-    private ServletRequest request;
-    private ServletResponse response;
 
     /**
      * 自己维护了一组管道工作
      */
-    private TommyPipeline pipeline;
+    private TommyPipeline pipeline = new TommyPipeline();
 
-    public void invoke(ServletRequest req, ServletResponse res) throws ServletException, IOException {
+    public void setServletClass(String servletClass)
+    {
+        this.servletClass = servletClass;
+    }
+
+    public String getServletClass()
+    {
+        return this.servletClass;
+    }
+
+    public void addValve(TommyValve valve)
+    {
+        pipeline.addValve(valve);
+    }
+
+
+    public void invoke(TommyRequest req,TommyResponse res) throws ServletException, IOException {
+        //顺序不是很好，需要调整一下
+        loadServlet();
+        setBasic();
         pipeline.invoke(req,res);
     }
 
@@ -38,7 +57,8 @@ public class TommyWrapper implements TommyContainer {
         if(myServlet==null)
         {
             try {
-                myServlet = (Servlet)loader.loadClass("servletName").newInstance();
+
+                myServlet = (Servlet)loader.loadClass(servletClass).getDeclaredConstructor().newInstance();
 
                 myServlet.init(null);
 
@@ -46,6 +66,8 @@ public class TommyWrapper implements TommyContainer {
                 e.printStackTrace();
             }
         }
+
+        System.out.println("Finish loading! now It is :"+myServlet);
 
         return myServlet;
     }
@@ -60,7 +82,9 @@ public class TommyWrapper implements TommyContainer {
     /**
      * 传入相应的加载器
      */
-    public void setLoader(){};
+    public void setLoader(TommyLoader loader){
+        this.loader = loader;
+    }
 
     /**
      * 写一个内部类，用来作为基础阀控制Servlet的内容
